--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     }
     </script>
 
-    <link rel="icon" type="image/jpeg" href="vivarium logo.jpeg">
+    <link rel="icon" type="image/jpeg" href="Logo.jpeg">
 
     <meta property="og:title" content="VIVARIUM STRATEGY | We Architect Legacy">
     <meta property="og:description" content="Proprietary consulting for Anti-Fragility. Architecting legacy through institutional-grade system design.">
@@ -226,4 +226,5 @@
 
 </body>
 </html>
+
 
