--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         </section>
 
         <section id="services" class="section">
-            <h2 class="section-title">THE ARSENAL (SERVICES)</h2>
+            <h2 class="section-title"> "Strategic Capabilities"</h2>
             <div class="services-grid">
                 <div class="service-card">
                     <h3>01. The Operational Blueprint</h3>
@@ -213,9 +213,9 @@
             <div class="contact-container">
                 <div class="contact-info">
                     <h3 style="margin-bottom:1rem;">Apply for Engagement</h3>
-                    <p>We accept fewer than 5% of inbound inquiries. Please provide details regarding your strategic requirements.</p>
+                    <p>"Engagement by Invitation or Referral Only.". Please provide details regarding your strategic requirements.</p>
                     <br>
-                    <p><strong>Office:</strong> Nashik, India</p>
+                    <p><strong>Office:</strong>"Registered Office: Nashik, India | Operations: Pan-India" </p>
                     <p><strong>Email:</strong> office@vivariumstrategy.in</p>
                 </div>
                 
@@ -252,3 +252,4 @@
 
 </body>
 </html>
+
