--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <div class="services-teaser">
             <div class="teaser-item">
                 <h3>01. Operational Blueprint</h3>
-                <p>Constraint Analysis for manufacturing throughput optimization. (Proven at Gabriel India).</p>
+                <p>Constraint Analysis for manufacturing throughput optimization.</p>
             </div>
             <div class="teaser-item">
                 <h3>02. Transactional Protocol</h3>
@@ -199,3 +199,4 @@
 
 </body>
 </html>
+
