--- a/insights.html
+++ b/insights.html
@@ -198,7 +198,65 @@
                 <a href="contact.html" class="access-btn">Request Access to Mandate</a>
             </div>
 
-            <!-- CARD 2: GABRIEL (Anonymized) -->
+            <!-- CARD 2: PROJECT VIVUS (ROLL-UP) -->
+            <div class="mandate-card">
+                <div class="mandate-meta">
+                    <span>SECTOR: SPECIALTY CHEMICALS</span>
+                    <span>TYPE: ROLL-UP STRATEGY</span>
+                </div>
+                <h3>Project Vivus: The Sustainable Chemical Roll-Up</h3>
+                <p class="mandate-desc">
+                    Synergistic integration of Chemcon, DMCC, and Bhageria. Addressing market fragmentation by leveraging captive solar infrastructure for energy arbitrage and capturing the "China + 1" institutional premium.
+                </p>
+                
+                <div class="data-points">
+                    <div class="data-item">
+                        <span>Entry Basis</span>
+                        <strong>₹2,159 Cr</strong>
+                    </div>
+                    <div class="data-item">
+                        <span>Target Value</span>
+                        <strong>₹9,975 Cr</strong>
+                    </div>
+                    <div class="data-item">
+                        <span>Alpha</span>
+                        <strong style="color:var(--accent);">+₹7,816 Cr</strong>
+                    </div>
+                </div>
+
+                <a href="contact.html" class="access-btn">Request Deal Sheet</a>
+            </div>
+
+            <!-- CARD 3: PROJECT NEURON -->
+            <div class="mandate-card">
+                <div class="mandate-meta">
+                    <span>SECTOR: BANKING & FINTECH</span>
+                    <span>TYPE: M&A SYNTHESIS</span>
+                </div>
+                <h3>Project Neuron: The Digital-Core Synthesis</h3>
+                <p class="mandate-desc">
+                    A ₹26,000 Cr structural arbitrage merging a legacy bank with a cloud-native fintech. The "Hollow Core" architecture reduces C/I ratio to 43%, triggering a re-rating to 2.5x Book Value.
+                </p>
+                
+                <div class="data-points">
+                    <div class="data-item">
+                        <span>Entry Basis</span>
+                        <strong>₹9,000 Cr</strong>
+                    </div>
+                    <div class="data-item">
+                        <span>Exit Value</span>
+                        <strong>₹26,370 Cr</strong>
+                    </div>
+                    <div class="data-item">
+                        <span>Status</span>
+                        <strong style="color:#00ff00;">ARCHITECTED</strong>
+                    </div>
+                </div>
+
+                <a href="contact.html" class="access-btn">Request Investment Memo</a>
+            </div>
+
+            <!-- CARD 4: THE CONSTRAINT THEORY -->
             <div class="mandate-card">
                 <div class="mandate-meta">
                     <span>SECTOR: MANUFACTURING</span>
