--- a/insights.html
+++ b/insights.html
@@ -164,7 +164,9 @@
     <header class="page-header">
         <h1>MANDATES & INTELLECT</h1>
         <p>Decoded market signals and proprietary valuation theses. We publish less than 1% of our work to protect client IP.</p>
-        
+        <div class="legal-disclaimer">
+            All case studies and mandates listed are proprietary frameworks and independent valuation theses architected by Vivarium Strategy. Company names are used for analytical reference only.
+        </div>        
     </header>
 
     <section class="insights-section">
