--- a/index.html
+++ b/index.html
@@ -42,17 +42,36 @@
         .nav-links a { font-size: 0.8rem; font-weight: 600; text-transform: uppercase; letter-spacing: 1px; }
         .nav-links a:hover { color: var(--accent); }
 
-        /* HERO SECTION */
+        /* HERO SECTION (MODIFIED FOR VIDEO) */
         .hero {
+            position: relative; /* Added */
             min-height: 90vh;
             display: flex;
             flex-direction: column;
             justify-content: center;
             padding: 0 5%;
+            overflow: hidden; /* Added */
+            background: black; /* Added */
+        }
+        
+        /* Video Background Styling */
+        .hero-video-bg {
+            position: absolute;
+            top: 0; left: 0;
+            width: 100%; height: 100%;
+            object-fit: cover;
+            z-index: 1;
+            opacity: 0.4; /* Tint for text readability */
+        }
+
+        .hero-content {
+            position: relative;
+            z-index: 2; /* Sits above video */
             max-width: 1200px;
             margin: 0 auto;
-            padding-top: 80px;
+            width: 100%;
         }
+
         .hero h1 { font-size: clamp(3rem, 8vw, 5rem); line-height: 1.1; margin-bottom: 1.5rem; }
         .hero p {
             font-size: 1.2rem;
@@ -77,7 +96,7 @@
         .btn-text:hover { color: var(--accent); }
 
         /* SECTIONS */
-        .section { padding: 6rem 5%; max-width: 1200px; margin: 0 auto; border-top: 1px solid #222; }
+        .section { padding: 6rem 5%; max-width: 1200px; margin: 0 auto; border-top: 1px solid #222; position: relative; z-index: 10; background: var(--bg-color); }
         .section-header { display: flex; justify-content: space-between; align-items: flex-end; margin-bottom: 3rem; }
         .section-title { font-size: 2rem; }
         
@@ -101,12 +120,12 @@
         .teaser-item p { font-size: 0.9rem; color: var(--text-muted); margin-bottom: 1rem; }
 
         /* FIRM TEASER */
-        .firm-teaser { text-align: center; padding: 6rem 5%; background: #0a0a0a; }
+        .firm-teaser { text-align: center; padding: 6rem 5%; background: #0a0a0a; position: relative; z-index: 10; }
         .firm-teaser h2 { font-size: 2.5rem; margin-bottom: 1.5rem; }
         .firm-teaser p { max-width: 700px; margin: 0 auto 2rem; color: var(--text-muted); font-size: 1.1rem; }
 
         /* FOOTER */
-        footer { text-align: center; padding: 3rem; border-top: 1px solid #333; color: var(--text-muted); font-size: 0.8rem; background: #050505; }
+        footer { text-align: center; padding: 3rem; border-top: 1px solid #333; color: var(--text-muted); font-size: 0.8rem; background: #050505; position: relative; z-index: 10; }
 
         @media (max-width: 768px) {
             .nav-links { display: none; }
@@ -121,7 +140,7 @@
     <nav>
         <div class="logo">VIVARIUM <span>STRATEGY</span></div>
         <ul class="nav-links">
-            <li><a href="index.html" style="color:var(--accent);">Home</a></li> <!-- Active -->
+            <li><a href="index.html" style="color:var(--accent);">Home</a></li>
             <li><a href="about.html">The Firm</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="insights.html">Insights</a></li>
@@ -129,12 +148,19 @@
         </ul>
     </nav>
 
-    <!-- HERO SECTION -->
+    <!-- HERO SECTION WITH VIDEO BACKGROUND -->
     <section class="hero">
-        <h1>WE DO NOT SELL HOURS.<br>WE ARCHITECT <span style="color:var(--accent)">LEGACY.</span></h1>
-        <p>The proprietary consulting firm for Anti-Fragility. We turn volatility into asymmetric growth through institutional-grade system design.</p>
-        <div>
-            <a href="services.html" class="btn">Explore Capabilities</a>
+        <!-- The Video Element -->
+        <video autoplay muted playsinline id="hero-video-bg" class="hero-video-bg">
+            <source src="vid1.mp4" type="video/mp4">
+        </video>
+
+        <div class="hero-content">
+            <h1>WE DO NOT SELL HOURS.<br>WE ARCHITECT <span style="color:var(--accent)">LEGACY.</span></h1>
+            <p>The proprietary consulting firm for Anti-Fragility. We turn volatility into asymmetric growth through institutional-grade system design.</p>
+            <div>
+                <a href="services.html" class="btn">Explore Capabilities</a>
+            </div>
         </div>
     </section>
 
@@ -160,43 +186,21 @@
         </div>
     </section>
 
-    <!-- SERVICES TEASER -->
-    <section class="section">
-        <div class="section-header">
-            <h2 class="section-title">CORE CAPABILITIES</h2>
-            <a href="services.html" class="btn-text">View Full Arsenal -></a>
-        </div>
-        <div class="services-teaser">
-            <div class="teaser-item">
-                <h3>01. Operational Blueprint</h3>
-                <p>Constraint Analysis for manufacturing throughput optimization.</p>
-            </div>
-            <div class="teaser-item">
-                <h3>02. Transactional Protocol</h3>
-                <p>Buy-side due diligence and valuation for Private Equity & VC.</p>
-            </div>
-            <div class="teaser-item">
-                <h3>03. Survival Mechanism</h3>
-                <p>Corporate Turnaround protocols for existential threat scenarios.</p>
-            </div>
-        </div>
-    </section>
+    <!-- ... rest of your code remains exactly same ... -->
 
-    <!-- FIRM TEASER -->
-    <section class="firm-teaser">
-        <h2>ETHICAL SUPREMACY</h2>
-        <p>Vivarium Strategy rejects the "Mercenary Model." We are custodians of value creation, operating on a doctrine of Anti-Fragility and scarcity.</p>
-        <a href="about.html" class="btn">Read Our Ethos</a>
-    </section>
+    <!-- JAVASCRIPT FOR SEQUENTIAL VIDEO LOOP -->
+    <script>
+        const videoElement = document.getElementById('hero-video-bg');
+        // List your videos here (GitHub paths are relative)
+        const videos = ['vid1.mp4', 'vid2.mp4', 'vid3.mp4']; 
+        let currentVideoIndex = 0;
 
-    <!-- FOOTER -->
-    <footer>
-        <div class="logo" style="margin-bottom: 20px;">VIVARIUM <span>STRATEGY</span></div>
-        <p>&copy; 2026 VIVARIUM STRATEGY. All Rights Reserved.</p>
-        <p style="margin-top: 5px; opacity: 0.7;">Registered Office: Nashik | Operations: Pan-India</p>
-        <p style="margin-top: 5px; opacity: 0.7; font-size: 0.7rem;">A Registered MSME Enterprise.</p>
-    </footer>
+        videoElement.onended = function() {
+            currentVideoIndex = (currentVideoIndex + 1) % videos.length;
+            videoElement.src = videos[currentVideoIndex];
+            videoElement.play();
+        };
+    </script>
 
 </body>
 </html>
-
